# Veriflow-agent

./: .gitignore  README.md  USAGE.md  claude.md  design_spec.md  install-claude-agent.bat  install-claude-agent.sh  pyproject.toml  readme_first.md  readme_first.md.example  start-gateway.bat  start-gateway.ps1  start-ui.bat  start-ui.sh  start_chat.bat  start_chat.py  start_chat.sh
.claude/agents/: veriflow-agent.md
doc/: IMPLEMENTATION_GUIDE.md  MIGRATION_PLAN.md
examples/aes_project/: requirement.md
examples/alu_project/: requirement.md
npm/: package.json
npm/scripts/: install.js
prompts/: stage1_architect.md  stage1_architect_quick.md  stage2_timing.md  stage3_coder.md  test_prompt.md
src/veriflow_agent/: __init__.py  cli.py  tui_client.py
tests/: conftest.py  run_tests.py  test_agents.py  test_chat.py  test_graph.py  test_integration.py  test_output_extractor.py  test_plan.md  test_report.md  test_tools.py
tests/phase1_mocks/: __init__.py  test_eda_mocks.py  test_env_mocks.py  test_llm_mocks.py
tests/phase2_routing/: __init__.py  test_debugger_routing.py  test_lint_routing.py  test_sim_routing.py  test_skill_d_routing.py  test_supervisor_routing.py  test_synth_routing.py  test_token_budget.py
tests/phase3_agents/: __init__.py  test_architect_node.py  test_coder_node.py  test_debugger_node.py  test_lint_node.py  test_microarch_node.py  test_sim_node.py  test_skill_d_node.py  test_supervisor_node.py  test_synth_node.py  test_timing_node.py
tests/phase4_integration/: __init__.py  test_cli_integration.py  test_full_pipeline.py
(+70 files in other folders)
